--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <div id="app">
+  <div id="app" style="padding-bottom: 20px">
   </div>
   <script src="/vendor.js"></script>
   <script src="/js/app.js"></script>
