--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>Veggy</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
   <div id="app" style="padding-bottom: 20px">
   </div>
-  <script src="/vendor.js"></script>
+  <script src="/js/vendors.js"></script>
   <script src="/js/app.js"></script>
 </body>
 </html>
