--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Veggy</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
   <div id="app" style="padding-bottom: 20px">
